--- a/Alec_gradient_descent2.ipynb
+++ b/Alec_gradient_descent2.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "d182f064",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,9 @@
     "\n",
     "    ##extract etab today\n",
     "    #extract lowest temperature and corresponding radiation density \n",
-    "    with open(\"/Users/alechewitt/Desktop/Stasis/Stasis1/PRyMrates/thermo/stasis_abundances.txt\", \"r\") as f:\n",
+    "    path_stasis = \"/Users/alechewitt/Desktop/Stasis/Stasis1/PRyMrates/thermo/stasis_abundances.txt\"\n",
+    "    path_stasis = \"/pub/ahewitt1/Stasis_new/Stasis1/PRyMrates/thermo/stasis_abundances.txt\"\n",
+    "    with open(path_stasis, \"r\") as f:\n",
     "        lines = f.readlines()\n",
     "        last_line = lines[-1].strip()\n",
     "        last_line = np.array([float(x) for x in last_line.split()])\n",
@@ -145,7 +147,48 @@
     "    Neff, Omeganurel, OneOverOmeganunr, YPCMB, YPBBN, DoHx1e5, He3oHx1e5, Li7oHx1e10 = results\n",
     "    #X_th = np.array([Neff, Omeganurel, OneOverOmeganunr, YPCMB, YPBBN, DoHx1e5, He3oHx1e5, Li7oHx1e10])\n",
     "    X_th = np.array([YPCMB, Neff, DoHx1e5, Li7oHx1e10])\n",
-    "    return sum(((X_th-X_obs)/sigma_X)**2) + ((eta_th-eta_obs)/sigma_eta)**2 + sum(((nus_th-nus_obs)/sigma_nus))\n",
+    "    return sum(((X_th-X_obs)/sigma_X)**2) + ((eta_th-eta_obs)/sigma_eta)**2 + sum(((nus_th-nus_obs)/sigma_nus)**2)\n",
+    "\n",
+    "def chi2_fn_test(params):\n",
+    "    #initialize stasis parameters\n",
+    "    PRyMini.compute_bckg_flag = True\n",
+    "    PRyMini.save_bckg_flag = True\n",
+    "    PRyMini.stasis_flag = True\n",
+    "    PRyMini.verbose_flag = False\n",
+    "    PRyMini.smallnet_flag = True\n",
+    "    PRyMini.stasis_params['gamma'] = 1\n",
+    "    PRyMini.stasis_params['delta'] = 1\n",
+    "    PRyMini.stasis_params['alpha'] = params[0]\n",
+    "    PRyMini.stasis_params['m0'] = params[1]\n",
+    "    PRyMini.stasis_params['Delta_m'] = params[1]\n",
+    "    PRyMini.stasis_params['plasma_inject_frac'] = params[2]\n",
+    "    PRyMini.stasis_params['tiny_radiation'] = 0.1\n",
+    "    PRyMini.stasis_params['stasis_end_mev'] = params[3]\n",
+    "    PRyMini.stasis_params['N_SPECIES'] = 25\n",
+    "\n",
+    "    #calculate theoretical values\n",
+    "    run = test_main.PRyMclass()\n",
+    "    results = run.PRyMresults()\n",
+    "\n",
+    "    ##extract etab today\n",
+    "    #extract lowest temperature and corresponding radiation density \n",
+    "    path_stasis = \"/Users/alechewitt/Desktop/Stasis/Stasis1/PRyMrates/thermo/stasis_abundances.txt\"\n",
+    "    path_stasis = \"/pub/ahewitt1/Stasis_new/Stasis1/PRyMrates/thermo/stasis_abundances.txt\"\n",
+    "    with open(path_stasis, \"r\") as f:\n",
+    "        lines = f.readlines()\n",
+    "        last_line = lines[-1].strip()\n",
+    "        last_line = np.array([float(x) for x in last_line.split()])\n",
+    "    kb = 1      #I think this is right in natural units\n",
+    "    T_MeV = last_line[1]\n",
+    "    rho_g = last_line[3]\n",
+    "    n_g = rho_g/T_MeV\n",
+    "    nB = run.nB(run.a_of_T(T_MeV))\n",
+    "    eta_th = nB/n_g\n",
+    "\n",
+    "    Neff, Omeganurel, OneOverOmeganunr, YPCMB, YPBBN, DoHx1e5, He3oHx1e5, Li7oHx1e10 = results\n",
+    "    #X_th = np.array([Neff, Omeganurel, OneOverOmeganunr, YPCMB, YPBBN, DoHx1e5, He3oHx1e5, Li7oHx1e10])\n",
+    "    X_th = np.array([YPCMB, Neff, DoHx1e5, Li7oHx1e10])\n",
+    "    return sum(((X_th-X_obs)/sigma_X)**2), ((eta_th-eta_obs)/sigma_eta)**2, sum(((nus_th-nus_obs)/sigma_nus)**2)\n",
     "\n",
     "# Gradient of chi^2 (numerical)\n",
     "def grad_chi2(chi2_fn,params, eps=1e-3):\n",
@@ -221,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "fbaf9f4d",
    "metadata": {},
    "outputs": [
@@ -294,8 +337,9 @@
     "params = np.array(params)\n",
     "print(params)\n",
     "\n",
+    "print(chi2_fn_test(params))\n",
     "\n",
-    "adagrad_minimize(chi2_fn, params, lr=0.1, epsilon=1e-4, max_iters=1, tol=1e-6, verbose=True)"
+    "#adagrad_minimize(chi2_fn, params, lr=0.1, epsilon=1e-4, max_iters=100, tol=1e-6, verbose=True)"
    ]
   },
   {
@@ -448,6 +492,46 @@
     "\n",
     "# Minimize\n",
     "res = minimize(chi2_fn, params, method='BFGS')'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b124af50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''import numpy as np\n",
+    "import emcee\n",
+    "import corner\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# ----- Define the true parameters -----\n",
+    "true_mean = np.array([0.0, 0.0])\n",
+    "true_cov = np.array([[1.0, 0.8], [0.8, 1.5]])\n",
+    "\n",
+    "# ----- Log-probability function -----\n",
+    "def log_prob(theta):\n",
+    "    diff = theta - true_mean\n",
+    "    inv_cov = np.linalg.inv(true_cov)\n",
+    "    return -0.5 * diff @ inv_cov @ diff\n",
+    "\n",
+    "# ----- MCMC setup -----\n",
+    "ndim = 2              # number of parameters\n",
+    "nwalkers = 32         # number of walkers\n",
+    "nsteps = 2000         # number of steps per walker\n",
+    "initial_pos = np.random.randn(nwalkers, ndim)  # starting guess\n",
+    "\n",
+    "# ----- Run the sampler -----\n",
+    "sampler = emcee.EnsembleSampler(nwalkers, ndim, log_prob)\n",
+    "sampler.run_mcmc(initial_pos, nsteps, progress=True)\n",
+    "\n",
+    "# ----- Get the samples -----\n",
+    "samples = sampler.get_chain(discard=500, thin=10, flat=True)  # burn-in and thinning\n",
+    "\n",
+    "# ----- Make a corner plot -----\n",
+    "fig = corner.corner(samples, labels=[\"$x$\", \"$y$\"], truths=true_mean)\n",
+    "plt.show()'''"
    ]
   }
  ],
