--- a/Alec_gradient_descent3.ipynb
+++ b/Alec_gradient_descent3.ipynb
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "4bf4018c",
    "metadata": {},
    "outputs": [
@@ -452,7 +452,7 @@
     "    PRyMini.stasis_params['stasis_end_mev'] = T_end_temp\n",
     "    for m in range(max_iter):\n",
     "        try:\n",
-    "            params = adagrad_minimize(chi2_fn, params, lr=0.1, epsilon=1e-4, max_iters=1, tol=1e-6, verbose=True)\n",
+    "            params,chisq = adagrad_minimize(chi2_fn, params, lr=0.1, epsilon=1e-4, max_iters=1, tol=1e-6, verbose=True)\n",
     "        except ValueError or IndexError: \n",
     "            #store the params when it encounters an error, i.e. minimize chisq as much as possible\n",
     "            with open(file_name, \"a\") as f:\n",
